fix npe in BioTransformerTask if annotation has no smiles